# openvm-solidity-sdk

./: .gitignore  LICENSE  README.md  foundry.toml
.github/workflows/: consistency-cli.yml  consistency-sdk.yml  consistency.yml  test.yml
coverage/: cmd_line  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
coverage/script/: Counter.s.sol.func-c.html  Counter.s.sol.func.html  Counter.s.sol.gcov.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
coverage/src/: Counter.sol.func-c.html  Counter.sol.func.html  Counter.sol.gcov.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
src/: Halo2Verifier.sol  OpenVmHalo2Verifier.sol  ProofFormatter.sol
src/interfaces/: IOpenVmHalo2Verifier.sol
src/v1.0.1/: OpenVmHalo2Verifier.sol
src/v1.1/: OpenVmHalo2Verifier.sol
src/v1.1.1/: Halo2Verifier.sol  OpenVmHalo2Verifier.sol
src/v1.2/: OpenVmHalo2Verifier.sol
src/v1.3/: OpenVmHalo2Verifier.sol
src/v1.4/: OpenVmHalo2Verifier.sol
src/v1.5/: Halo2Verifier.sol  OpenVmHalo2Verifier.sol
src/v1.6/: Halo2Verifier.sol  OpenVmHalo2Verifier.sol
src/v1.7/: Halo2Verifier.sol  OpenVmHalo2Verifier.sol
src/v2.0/: Halo2Verifier.sol  OpenVmHalo2Verifier.sol
src/v2.0-base/: Halo2Verifier.sol
test/: OpenVmHalo2Verifier.t.sol
test/v1.0.1/: OpenVmHalo2Verifer.t.sol  evm.proof
test/v1.1/: OpenVmHalo2Verifer.t.sol
test/v1.1.1/: OpenVmHalo2Verifer.t.sol
test/v1.2/: OpenVmHalo2Verifer.t.sol  evm.proof
test/v1.3/: OpenVmHalo2Verifer.t.sol
test/v1.4/: evm.proof  (+1 more)
tools/generate-verifier/: Cargo.toml
(+12 files in other folders)
